add complete pagination functionality

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     </div>
                     <div class="col-auto">
                         <select class="form-control form-control-sm" id="order">
-                            <option value="market_cap_desc" selected>Descending</option>
-                            <option value="market_cap_asc">Ascending</option>                            
+                            <option value="market_cap_desc" selected>High to low</option>
+                            <option value="market_cap_asc">Low to High</option>                            
                         </select>
                     </div>
                     <div class="col-auto">
@@ -54,6 +54,7 @@
                             <option value="50">50</option>
                         </select>
                     </div>
+                    <p class="text-danger small" id="warning">Select currency to show results</p>
                 </div>
             </div>
         </div>
