--- a/coin.html
+++ b/coin.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crypto Exchange</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.css" integrity="sha256-IvM9nJf/b5l2RoebiFno92E5ONttVyaEEsdemDC6iQA=" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <header class="container-fluid px-md-5 py-1">
+    <header class="container-fluid px-md-5 py-1 mb-3">
         <nav class="navbar navbar-expand-lg justify-content-between">
             <a class="navbar-brand text-reset text-decoration-none navbar-text" href="index.html">
                 <img src="resources/icon.png" id="icon" alt="icon" class="d-inline-block align-top" />
@@ -28,10 +29,30 @@
             </div> 
         </nav>
     </header>
-    <main></main>
+    <main class="container">
+        <div class="row">
+            <div class="col-6"></div>
+            <div class="col-1"></div>
+            <div class="col-5">
+                <div class="border border-secondary rounded p-1 mb-1">
+                    <canvas class="text-white p-1" id="myChart" width="100" height="100"></canvas>
+                </div>
+                <div>
+                    <select id="currency" class="form-control">
+                        <option value="usd" selected>US Dollars</option>
+                        <option value="eur">Euros</option>
+                        <option value="jpy">Yen</option>
+                        <option value="inr">Indian Rupees</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+    </main>
     <footer></footer>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.js" integrity="sha256-8zyeSXm+yTvzUN1VgAOinFgaVFEFTyYzWShOy9w7WoQ=" crossorigin="anonymous"></script>
+    <script src="coin.js" type="text/javascript"></script>
 </body>
 </html>
