--- a/coin.html
+++ b/coin.html
@@ -30,6 +30,15 @@
         </nav>
     </header>
     <main class="container">
+        <div class="row">
+            <div class="col-12">
+                <div id="display-spinner" class="d-flex justify-content-center m-5 p-5">
+                    <div class="spinner-grow m-5" role="status">
+                        <span class="sr-only">Loading...</span>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row p-2 d-none" id="main-display">
             <div class="col-6">
                 <div class="row">
