change homepgae load functionality

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                 <div class="form-row" id="input_container">
                     <div class="col-auto">
                         <select class="form-control form-control-sm" id="currency">
-                            <option value="">Currency</option>
-                            <option value="usd">US Dollars</option>
+                            <option value="usd" selected>US Dollars</option>
                             <option value="eur">Euros</option>
                             <option value="jpy">Yen</option>
                             <option value="inr">Indian Rupees</option>
@@ -51,7 +50,7 @@
                         <select class="form-control form-control-sm" id="per-page">
                             <option value="150">150</option>
                             <option value="100">100</option>
-                            <option value="50">50</option>
+                            <option value="50" selected>50</option>
                         </select>
                     </div>
                     <p class="text-danger small" id="warning">Select currency to show results</p>
