--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <header class="container-fluid px-md-5 py-1 shadow-sm">
+    <header class="container-fluid px-md-5 py-1">
         <nav class="navbar navbar-expand-lg justify-content-between">
             <a class="navbar-brand text-reset text-decoration-none navbar-text" href="index.html">
                 <img src="resources/icon.png" id="icon" alt="icon" class="d-inline-block align-top" />
