--- a/index.html
+++ b/index.html
@@ -53,12 +53,11 @@
                             <option value="50" selected>50</option>
                         </select>
                     </div>
-                    <p class="text-danger small" id="warning">Select currency to show results</p>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 table-responsive">
                 <div id="display-spinner" class="d-none justify-content-center m-5 p-5">
                     <div class="spinner-grow m-5" role="status">
                         <span class="sr-only">Loading...</span>
