--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>Crypto Exchange</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="icon" href="resources/icon.png">
 </head>
 <body>
     <header class="container-fluid px-md-5 py-1">
         <nav class="navbar navbar-expand-lg justify-content-between">
             <a class="navbar-brand text-reset text-decoration-none navbar-text" href="index.html">
                 <img src="resources/icon.png" id="icon" alt="icon" class="d-inline-block align-top" />
-                Stock Exchange
+                Crypto Exchange
             </a>
             <div id="nav-info">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content">
