--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
                     <span class="nav-toggler-icon navbar-text">&#9776;</span>
                 </button>
                 <div class="collapse navbar-collapse" id="nav-content">
-                    <div class="navbar-nav d-lg-flex justify-content-lg-around">
+                    <div class="navbar-nav d-lg-flex flex-row-reverse">
                         <a class="nav-item nav-link text-reset" href="index.html">Home <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link text-reset" href="#">Markets</a>
                     </div>
                 </div>
             </div> 
